5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1747_3092.log
== TEST (2019-05-16 10:07:45) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

while ((r == v) or (r == e) or (r = d)):
	v = 3
	e = 2
	d = 1
	res = v+e+d
print(round, 3)

-- ERROR:
File "XXXX", line 7
    while ((r == v) or (r == e) or (r = d)):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:07:54) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

while ((r == v) or (r == e) or (r == d)):
	v = 3
	e = 2
	d = 1
	res = v+e+d
print(round, 3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while ((r == v) or (r == e) or (r == d)):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:08:41) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")
v = 3
e = 2
d = 1
while ((r == v) or (r == e) or (r == d)):

	res = v+e+d
print(round, 3)

-- OUTPUT:
<built-in function round> 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:08:58) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")
v = 3
e = 2
d = 1
while ((r == v) or (r == e) or (r == d)):

	res = v+e+d
print(round, 3)

-- EXECUTION TIME:
0.190524
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
<built-in function round> 3
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
<built-in function round> 3
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
<built-in function round> 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:28) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = r+v+e
	t = t + 1
	print(res)
-- OUTPUT:
<built-in function round> 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:43) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = r+v+e
	t = t + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(res)
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:13:23) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = r+v+e
	t = t + 1
	print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(res)
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:00) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = r+v+e
	t = t + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(res)
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:39) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

r = input("Resultado de partidas (V/E/D):")

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (r+v+e)*1/100
	t = t + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(res)
NameError: name 'res' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:31) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (r+v+e)*1/100
	t = t + 1
	r = input("resultado:")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (r == v or r == e or r == d):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:43) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto

v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	t = t + 1
	r = input("resultado:")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (r == v or r == e or r == d):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:08) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	t = t + 1
	r = input("resultado:")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (r == v or r == e or r == d):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:24) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	t = t + 1
	r = input("resultado:")
	print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (r == v or r == e or r == d):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:32) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	t = t + 1
r = input("resultado:")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (r == v or r == e or r == d):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:24:15) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	if(r ==v):
	v = 3
	elif (r == e):
	e = 2
	elif(r == d):
	d = 1
res = (d+v+e)*1/100
t = t + 1
	r = input("resultado:")
	
	
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:32) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	t = t + 1
	n = input("kds")
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:04) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	
	n = input("kds")
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:12) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	res = (d+v+e)*1/100
	
n = input("kds")
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:16) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:23) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
		n = input("resultdaso:")
-- ERROR:
File "XXXX", line 11
    v = 3
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:29) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
n = input("resultdaso:")
-- ERROR:
File "XXXX", line 10
    n = input()
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:35) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
	while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- ERROR:
File "XXXX", line 9
    while (r == v or r == e or r == d):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:38) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
	while (r == v or r == e or r == d):
		n = input("resultdaso:")
-- ERROR:
File "XXXX", line 9
    while (r == v or r == e or r == d):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:44) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- ERROR:
File "XXXX", line 9
    while (r == v or r == e or r == d):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:29:44) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- EXECUTION TIME:
0.121583
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:

-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:

-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:47) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
e = 2
d = 1
t = 1
while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- ERROR:
File "XXXX", line 9
    while (r == v or r == e or r == d):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:00) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")

while (r == v or r == e or r == d):
	n = input("resultdaso:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (r == v or r == e or r == d):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:32) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")

while (r == "v" or r == "e" or r == "d"):
	n = input("resultado:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:25) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")

while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (r == v):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:13) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")

while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (r == v):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:36) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:40) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	res = e + v + d

	n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:44) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	res = e + v + d

	n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:28) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d") and (0 <= r <= 100):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	res = (e + v + d)*100
	
	n = input("resultado:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (r == "v" or r == "e" or r == "d") and (0 <= r <= 100):
TypeError: '<=' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:24) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	if (r == v):
		v = 3
	elif (r == e):
		e = 2
	elif (r == d):
		d = 1
	res = (e + v + d)*100
	
	n = input("resultado:")
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:27) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	
	res = (e + v + d)*100
	
	n = input("resultado:")
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:56) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
while (r == "v" or r == "e" or r == "d"):
	
	res = (e + v + d)*100
	
	n = input("resultado:")
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:33) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while (r == "v" or r == "e" or r == "d"):
	t = t - 1
	res = (e + v + d)*100
	
	n = input("resultado:")
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:59) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while (r == "v" or r == "e" or r == "d"):
	t = t - 1
	res = (e + v + d)*100
	
	n = input("resultado:")
else:
	print(res)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:17) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while:
	if(r == "v" or r == "e" or r == "d"):
	t = t - 1
	res = (e + v + d)*100
	
	n = input("resultado:")
else:
	print(res)


-- ERROR:
File "XXXX", line 9
    while:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:57) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while(r == "v" or r == "e" or r == "d"):
	if (r == "v" or r == "e" or r == "d"):
	t = t - 1
	res = (e + v + d)*100
	
	n = input("resultado:")
	else:
	print(res)


-- ERROR:
File "XXXX", line 11
    t = t - 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:12) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while(r == "v" or r == "e" or r == "d"):
	if (r == "v" or r == "e" or r == "d"):
		t = t + 1
		res = (e + v + d)*100
	
	n = input("resultado:")
	else:
	print(res)


-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:17) 
-- CODE:
#vitoria = 3 pontos
#empate = 2 pontos
#derrota = 1 ponto
r = input("resultado:")
v = 3
d = 1
e = 2
t = 0
while(r == "v" or r == "e" or r == "d"):
	if (r == "v" or r == "e" or r == "d"):
		t = t + 1
		res = (e + v + d)*100
	
	n = input("resultado:")
else:
	print(res)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    n = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
